extends Control


func _on_button_back_pressed() -> void:
	#get_tree().change_scene_to_file("res://scenes/main_menu.tscn") # Replace with function body.
	pass


func _on_musicslider_drag_started() -> void:
	pass # Replace with function body.


func _on_musicslider_drag_ended(value_changed: bool) -> void:
	pass # Replace with function body.


func _on_sfx_slider_drag_started() -> void:
	pass # Replace with function body.


func _on_sfx_slider_drag_ended(value_changed: bool) -> void:
	pass # Replace with function body.
